--- a/styles/sass/pages/_projects.scss
+++ b/styles/sass/pages/_projects.scss
@@ -1,8 +1,5 @@
 .project__container {
     margin:  auto ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     position: fixed;
     right: 0;
     width: 95vw;
@@ -25,9 +22,7 @@
     border-radius: 3px;
     margin: 2rem auto;
 
-    &:first-child {
-    
-    }
+   
 }
 
 
@@ -71,7 +66,7 @@
         }
 
         &:first-child {
-            margin-top: 10rem;
+            margin-top: 3rem;
 
             
 
